--- a/more-info/contact.html
+++ b/more-info/contact.html
@@ -9,13 +9,13 @@
 
   <body>
     <!-- Thêm các link điều hướng -->
-    <a href="index.html">Trang chủ</a>
+    <a href="/">Trang chủ</a>
 
     <!-- 2. Điều hướng đến contact.html -->
-    <a href="/more-info/contact.html">Liên lạc</a>
+    <a href="./more-info/contact.html">Liên lạc</a>
 
     <!-- 3. Điều hướng đến my-skill.html -->
-    <a href="/more-info/my-skill.html">My-Skill</a>
+    <a href="./more-info/my-skill.html">My-Skill</a>
 
     <h1>Contact Me</h1>
     <p>
